<resources>
    <string name="app_name">Polytech - EDT</string>
    <string name="app_short_name">EDT</string>

    <!-- Scope choice -->
    <string name="menu_day_scope">1 Day</string>
    <string name="menu_days_scope">3 Days</string>
    <string name="menu_week_scope">1 Week</string>

    <!-- Navigation view -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Words -->
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="other">Other</string>
    <string name="about">About</string>
    <string name="groups">Groups</string>
    <string name="menu">Menu</string>
    <string name="undefined">Undefined</string>
    <string name="reports">Reports</string>
    <string name="close">Close</string>
    <string name="contact">Contact</string>
    <string name="loading">Loading…</string>

    <!-- About page items -->
    <string name="version">Version</string>
    <string name="build_date">Build date</string>
    <string name="git_repo">Git repository</string>
    <string name="git_revision">Git revision</string>
    <string name="devs">Developers</string>
    <string name="license">License</string>

    <!-- Error page -->
    <string name="error_explication_text">An unexpected error has occurred.\nHelp developers by providing error details.\nThank you for your support!</string>
    <string name="exception_cause">Exception cause</string>
    <string name="report_content">Report content</string>
    <string name="show_report">Show report</string>
    <string name="send_report">Send report</string>
    <string name="error_page_title">Error</string>
    <string name="no_report">No reports</string>

    <!-- Mail report -->
    <string name="mail_report_subject">Error report</string>
    <string name="mail_report_header">=== COMMENT ===\n\n=== REPORT ===\n\n</string>

    <!-- Loading page -->
    <string name="loading_waiting_message">Loading groups \n(it will take some time)</string>
    <string name="loading_conf_error">Try to load a malformed configuration, re-create it</string>

    <!-- Settings page -->
    <string name="calendar_unit">Calendar unit</string>
    <string name="calendar_duration">Calendar duration</string>
    <string name="settings_pick_calendar_unit" type="id">Pick calendar unit</string>
    <string name="settings_pick_calendar_duration" type="id">Choose calendar duration</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
</resources>
