<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/nav_calendar"
                android:icon="@drawable/ic_event_note"
                android:title="@string/calendar" />
            <item
                android:id="@+id/nav_group"
                android:icon="@drawable/ic_people"
                android:title="@string/groups" />
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
        </menu>
    </item>
</menu>
